--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "user_app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/amanuielgrmay/growmeorganic",
+  "homepage": "https://github.com/amanuielgrmay/growmeorganic.git",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -17,7 +17,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.10.1",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
@@ -32,6 +31,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "gh-pages": "^6.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
